--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "google-chat-notification",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "description": "Google Chat Notification for GitHub Actions",
   "main": "dist/index.js",
@@ -10,25 +10,24 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Co-qn/google-chat-notification"
+    "url": "git+https://github.com/thenationofalex/google-chat-notification"
   },
   "keywords": [
     "actions",
     "node",
     "setup"
   ],
-  "author": "Co-qn",
+  "author": "thenationofalex",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.10.0",
+    "@actions/core": "^1.10.1",
     "@actions/github": "^5.1.1",
-    "axios": "^1.2.0"
+    "axios": "^1.5.1"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/jest": "^29.2.3",
-    "@types/node": "^18.11.9",
-    "@zeit/ncc": "^0.22.3",
+    "@types/node": "^20.8.2",
     "jest": "^29.3.1",
     "jest-circus": "^29.3.1",
     "ts-jest": "^29.0.3",
